# ai-engineer-starter

./: .env.sample  .gitconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_questions.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 71ece6175250_update_vector_dimensions.py  7d4abd67784a_add_embedding_type_column.py  d06308dd06df_create_documents_table.py  daa2443e0576_create_documents_table.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  config_manager.py  database.py  settings.py
app/db/: base.py
app/db/postgres/: __init__.py  models.py  session.py
app/db/vector_store/: base.py  factory.py  pinecone.py  postgres.py
app/embeddings/: base.py  factory.py  huggingface.py  ollama.py  openai.py  types.py
app/llm/: anthropic.py  base.py  factory.py  ollama.py  openai.py
app/models/: document.py  vector_store.py
app/rag/: base.py  simple_rag.py
app/schemas/: rag.py
app/services/: embeddings.py  rag_service.py
app/ui/: gradio_ui.py
bruno-api/: Import.bru  Query DB.bru  Query.bru  bruno.json
migrations/versions/: update_embedding_dimension.py
scripts/: run_migrations.py
tests/: __init__.py  test_main.py
