[tool.poetry]
name = "ai-engineer"
version = "0.1.0"
description = "Professional Python backend with LLM integration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "0.109.0"
uvicorn = "0.27.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
asyncpg = "0.29.0"
alembic = "^1.13.1"
python-dotenv = "1.0.0"
pydantic = "2.6.0"
pydantic-settings = "2.1.0"
langchain = "0.1.0"
openai = "1.12.0"
httpx = "0.26.0"
pgvector = "^0.2.5"
sentence-transformers = "2.2.2"
psycopg2-binary = "^2.9.9"
anthropic = "0.18.1"
gradio = "4.44.1"
pinecone-client = "3.0.2"
huggingface-hub = "0.19.4"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.0"
pytest-asyncio = "0.23.5"
pytest-cov = "4.1.0"
pytest-mock = "3.12.0"
ruff = "0.2.2"
black = "24.1.1"
isort = "5.13.2"
mypy = "1.8.0"
pre-commit = "3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = ["B008"]
per-file-ignores = {"app/main.py" = ["B008"]}

[tool.ruff.isort]
known-first-party = ["app"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing"
